--- a/my-app/package.json
+++ b/my-app/package.json
@@ -35,6 +35,7 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-skinview3d": "^5.0.3",
     "skinview3d": "^3.0.1",
     "tailwind-variants": "^0.1.20",
     "typescript": "5.3.3"
