Update ESLint configuration and disable linting during development

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
+    "dev": "DISABLE_ESLINT_PLUGIN=true next dev",
+    "build": "DISABLE_ESLINT_PLUGIN=true next build",
+    "start": "DISABLE_ESLINT_PLUGIN=true next start",
+    "lint": "DISABLE_ESLINT_PLUGIN=true next lint",
     "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
   },
   "dependencies": {
